# d-ai-compare-orchestrations

./: README.md
.github/instructions/: general.instructions.md
.github/workflows/: mcp-server-build.yaml
data/: products.json  users.json
docs/: Design.md  ImplementationLog.md
src/: __init__.py
src/ai_agents/: .env.example  README.md  __init__.py  azure_ai_agent.py  cleanup_agents.py  pyproject.toml  quick_test_azure_ai.py  test_agent_no_mcp.py  test_azure_agent.py
src/ai_agents/results/: azureai-scenario1.md  azureai-scenario2.md  azureai-scenario3.md  azureai-scenario4.md  azureai-scenario5.md
src/ai_agents/tests/: .gitignore  __init__.py  demo_azure_ai_agent.py  demo_azure_ai_agent_markdown.py  test_azure_ai_api.py  validate_structure.py
src/mcp_server/: Dockerfile  README.md  data_store.py  main.py  pyproject.toml  run_remote_tests.py
src/mcp_server/data/: departments.json  product_details.json  suppliers.json
src/mcp_server/models/: __init__.py  business.py
src/mcp_server/tests/: __init__.py  fastmcp_client.py  test_mcp_server.py  test_remote_mcp_server.py
